; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/ipv6/extr_exthdrs.c_ipv6_push_frag_opts.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/ipv6/extr_exthdrs.c_ipv6_push_frag_opts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i32 }
%struct.ipv6_txoptions = type { i64 }

@NEXTHDR_DEST = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ipv6_push_frag_opts(%struct.sk_buff* %0, %struct.ipv6_txoptions* %1, i32* %2) #0 {
  %4 = alloca %struct.sk_buff*, align 8
  %5 = alloca %struct.ipv6_txoptions*, align 8
  %6 = alloca i32*, align 8
  store %struct.sk_buff* %0, %struct.sk_buff** %4, align 8
  store %struct.ipv6_txoptions* %1, %struct.ipv6_txoptions** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load %struct.ipv6_txoptions*, %struct.ipv6_txoptions** %5, align 8
  %8 = getelementptr inbounds %struct.ipv6_txoptions, %struct.ipv6_txoptions* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %19

11:                                               ; preds = %3
  %12 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %13 = load i32*, i32** %6, align 8
  %14 = load i32, i32* @NEXTHDR_DEST, align 4
  %15 = load %struct.ipv6_txoptions*, %struct.ipv6_txoptions** %5, align 8
  %16 = getelementptr inbounds %struct.ipv6_txoptions, %struct.ipv6_txoptions* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = call i32 @ipv6_push_exthdr(%struct.sk_buff* %12, i32* %13, i32 %14, i64 %17)
  br label %19

19:                                               ; preds = %11, %3
  ret void
}

declare dso_local i32 @ipv6_push_exthdr(%struct.sk_buff*, i32*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
